k8s/ingress-example.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: demo
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "0.15"
              memory: "700Mi"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: demo
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  type: ClusterIP
  ports:
    - port: 32400
      targetPort: 80
  selector:
    app: nginx-app
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "nginx-ingress"
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /nginx
            backend:
              serviceName: "nginx-service"
              servicePort: 32400
          - path: /dotnetapp
            backend:
              serviceName: "demo-service"
              servicePort: 32401
